// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticlesListComponent should show "articlesList" @Input 1`] = `
<app-articles-list
  articlesList={[Function Array]}
  contentLength="0"
  deleteArticle={[Function EventEmitter]}
  favorited={[Function EventEmitter]}
  isErrorLoading="false"
  isLoading="false"
>
  <div
    class="articles-list"
  >
    <div
      class="articles-list__preview"
      hidden=""
    >
       conduit.articlesList.empty. 
    </div>
    <div>
      
      <app-article
        ng-reflect-article="[object Object]"
      >
         title 
        <a />
      </app-article>
      <app-article
        ng-reflect-article="[object Object]"
      >
         title 
        <a />
      </app-article>
      <app-article
        ng-reflect-article="[object Object]"
      >
         title 
        <a />
      </app-article>
      
    </div>
  </div>
</app-articles-list>
`;

exports[`ArticlesListComponent should show "articlesList" @Input 2`] = `
<app-articles-list
  articlesList={[Function Array]}
  contentLength="0"
  deleteArticle={[Function EventEmitter]}
  favorited={[Function EventEmitter]}
  isErrorLoading="false"
  isLoading="false"
>
  <div
    class="articles-list"
  >
    <div
      class="articles-list__preview"
      hidden=""
    >
       conduit.articlesList.empty. 
    </div>
    <div>
      
      <app-article
        ng-reflect-article="[object Object]"
      >
         title 
        <a />
      </app-article>
      <app-article
        ng-reflect-article="[object Object]"
      >
         title 
        <a />
      </app-article>
      
    </div>
  </div>
</app-articles-list>
`;

exports[`ArticlesListComponent should show "articlesList" @Input 3`] = `
<app-articles-list
  articlesList={[Function Array]}
  contentLength="0"
  deleteArticle={[Function EventEmitter]}
  favorited={[Function EventEmitter]}
  isErrorLoading="false"
  isLoading="false"
>
  <div
    class="articles-list"
  >
    <div
      class="articles-list__preview"
      hidden=""
    >
       conduit.articlesList.empty. 
    </div>
    <div>
      
      <app-article
        ng-reflect-article="[object Object]"
      >
         title 
        <a />
      </app-article>
      
    </div>
  </div>
</app-articles-list>
`;

exports[`ArticlesListComponent should show "articlesList" @Input 4`] = `
<app-articles-list
  articlesList={[Function Array]}
  contentLength="0"
  deleteArticle={[Function EventEmitter]}
  favorited={[Function EventEmitter]}
  isErrorLoading="false"
  isLoading="false"
>
  <div
    class="articles-list"
  >
    <div
      class="articles-list__preview"
    >
       conduit.articlesList.empty. 
    </div>
    <div>
      
      
    </div>
  </div>
</app-articles-list>
`;

exports[`ArticlesListComponent should show loader 1`] = `
<app-articles-list
  articlesList={[Function Array]}
  contentLength="0"
  deleteArticle={[Function EventEmitter]}
  favorited={[Function EventEmitter]}
  isErrorLoading="false"
  isLoading={[Function Boolean]}
>
  <div
    class="articles-list"
  >
    <div
      class="articles-list__preview"
      hidden=""
    >
       conduit.articlesList.empty. 
    </div>
    <div>
      
      <app-article
        ng-reflect-article="[object Object]"
      >
         title 
        <a />
      </app-article>
      <app-article
        ng-reflect-article="[object Object]"
      >
         title 
        <a />
      </app-article>
      <app-article
        ng-reflect-article="[object Object]"
      >
         title 
        <a />
      </app-article>
      
    </div>
  </div>
</app-articles-list>
`;

exports[`ArticlesListComponent should show message "No articles are here... yet" 1`] = `
<app-articles-list
  articlesList={[Function Array]}
  contentLength="0"
  deleteArticle={[Function EventEmitter]}
  favorited={[Function EventEmitter]}
  isErrorLoading="false"
  isLoading="false"
>
  <div
    class="articles-list"
  >
    <div
      class="articles-list__preview"
    >
       conduit.articlesList.empty. 
    </div>
    <div>
      
      
    </div>
  </div>
</app-articles-list>
`;

exports[`ArticlesListComponent should show message "No articles are here... yet" 2`] = `
<app-articles-list
  articlesList={[Function Array]}
  contentLength="0"
  deleteArticle={[Function EventEmitter]}
  favorited={[Function EventEmitter]}
  isErrorLoading="false"
  isLoading="false"
>
  <div
    class="articles-list"
  >
    <div
      class="articles-list__preview"
    >
       conduit.articlesList.empty. 
    </div>
    <div>
      
      
    </div>
  </div>
</app-articles-list>
`;
